--- a/myapp/src/Components/FunctionalCom/Routing/style.css
+++ b/myapp/src/Components/FunctionalCom/Routing/style.css
@@ -6,7 +6,7 @@ ul{
 }
 a{
   text-decoration: none;
-  color: white;
+  color: red;
 }
 .myheader{
   padding: 10px;
@@ -17,4 +17,10 @@ a{
   margin: 0;
   padding: 0;
 
+}
+.products{
+  background-color: rgb(246, 246, 14);
+  margin-top: 5px;
+  padding: 4px;
+  
 }
